--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1374,7 +1374,7 @@ input[type=submit]:hover{
 #user-profile-name{
 	font-size: 200%;
 	text-shadow: 1px 1px 2px #aaa;
-	padding: 10px 0px;
+	padding: 10px 0 0 2em;
 }
 
 #user-profile-learnings{
@@ -1384,39 +1384,33 @@ input[type=submit]:hover{
 .user-profile-learning{
 	display: inline-block;
 	vertical-align: top;
-/*	width: 300px;*/
-	border: 1px solid #999;
-	border-radius: 10px;
 	box-shadow: 0px 0px 10px #aaa;
 	background: #fff;
 	margin: 10px;
 	padding: 15px;
+	width:  300px;
+	border-radius: 5px;
+	background-image: url('textures/light_wool.png');
+	box-shadow: 0px 0px 15px #aaa;
 }
 
 .user-profile-learning-title a{
 	font-size: 150%;
 	color: #777;
 	text-shadow: 1px 1px 2px #aaa;
-	transition-property: color;
+	
 	-o-transition-property: color;
 	-moz-transition-property: color;
 	-webkit-transition-property: color;
-	transition-duration: 0.5s;	
+	transition-property: color;
 	-o-transition-duration: 0.5s;	
 	-moz-transition-duration: 0.5s;	
 	-webkit-transition-duration: 0.5s;	
-	
+	transition-duration: 0.5s;	
 }
 
 .user-profile-learning-title a:hover{
-	transition-property: color;
-	-o-transition-property: color;
-	-moz-transition-property: color;
-	-webkit-transition-property: color;
-	transition-duration: 0.5s;	
-	-o-transition-duration: 0.5s;	
-	-moz-transition-duration: 0.5s;	
-	-webkit-transition-duration: 0.5s;	
+	
 	
 	text-shadow: 1px 1px 3px #777;
 	color: #000;
@@ -1425,6 +1419,26 @@ input[type=submit]:hover{
 .user-profile-learning-score{
 	font-size: 150%;
 	padding: 10px 0px;
+	font-weight: normal;
+	
+	color: #444;
+	text-shadow: 1px 1px 1px white,
+				-1px -1px 1px rgba(0, 0, 0, 0.3);
+				
+	position: relative;
+		top: 1.4em;
+}
+.user-profile-learning-score:after {
+	content: 'learnt!';
+	font-weight: normal;
+	font-size: 0.8em;
+	text-shadow: none;
+}
+
+.user-profile-learning-date {
+	text-align: right;
+	color: #444;
+	font-size: 1.1em;
 }
 
 /* STYLES COMMON TO ALL BUTTONS */
@@ -1444,6 +1458,7 @@ input[type=submit],
 				-1px -1px 1px rgba(0, 0, 0, 0.2);
 				
 	/* W3C Standard notation after the browser-specific notations , so browsers start using this one instead of the browser-specific ones when they learn it. */
+	/* No need to put the transition in the :hover state to make it both ways */
 	-o-transition-property: background, background-color;
 	-moz-transition-property: background, background-color;
 	-webkit-transition-property: background, background-color;
