--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
 					<%= "#{(learning[:score]*100).round(2)}%"%>
 				</div>
 				<div class="user-profile-learning-date">
-					<%= time_ago_in_words(learning[:last_session])%>
+					<%= "#{time_ago_in_words(learning[:last_session])} ago"%>
 				</div>
 			</div>
 		<% end %>
