--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1024,12 +1024,18 @@ input[type=submit]:hover{
 	height: 25px;
 	background: #eee;
 	margin: 0px auto;
-	padding: 2px;
-	
-	border-radius: 4px;
-	
+	padding: 0px;	
+	border-radius: 4px;	
 	box-shadow: rgba(51, 51, 51, 0.6) 0px 0px 20px 0px;
-	
+	text-align: right;
+	background: #eee;
+}
+
+#quiz-progress-bar{
+	display: inline-block;
+	height: 21px;
+	margin: 1px 0px;
+	border: 1px solid #ddd;
 }
 
 .quiz-progress-item{
@@ -1107,6 +1113,7 @@ input[type=submit]:hover{
 	width: 600px;
 	margin: 10px auto;
 	padding: 10px;	
+	background: url('textures/lined_paper.png');
 }
 
 #quiz-summary-title{
